macOS automatic graphics switching does not use use more powerful GPU for Blender #71342

Closed
opened 2019-11-04 17:15:19 +01:00 by Sebastien Loss · 12 comments

System Information
Operating system: MACOS 10.15.1
Graphics card: Radeon Pro 560 4 Go / Intel HD Graphics 630 1536 Mo

Blender Version
Broken: 2.80 ( stable official )
Worked: (optional)

Short description of error

Blender 2.8 viewport ( and UI ) performance is very bad.
On macOS Mojave ( no problems ).

BUT ! If I run "Affinity Designer" and open/create document, just after that you can launch blender 2.8 and voilà, good performances are back until next machine restart ??? It seems Affinity Designer make something that allow to Blender o access CG card , not intel HD Graphics

Exact steps for others to reproduce the error

Reproduced on two MacBook Pro 2017 and 2019 with macOS Catalina 10.15.1

  • restart your computer
  • launch blender 2.8
  • Turn around default cube scene or a more complex scene. Note poor performances.
  • Close blender
  • Run Affinity designer and create new document ( important, if not, magic doesn't happen )
  • You can close Affinity or not.
  • Go to blender 2.8. Now blender run smoothly.

Thanks

**System Information** Operating system: MACOS 10.15.1 Graphics card: Radeon Pro 560 4 Go / Intel HD Graphics 630 1536 Mo **Blender Version** Broken: 2.80 ( stable official ) Worked: (optional) **Short description of error** Blender 2.8 viewport ( and UI ) performance is very bad. On macOS Mojave ( no problems ). BUT ! If I run "Affinity Designer" and open/create document, just after that you can launch blender 2.8 and voilà, good performances are back until next machine restart ??? It seems Affinity Designer make something that allow to Blender o access CG card , not intel HD Graphics **Exact steps for others to reproduce the error** Reproduced on two MacBook Pro 2017 and 2019 with macOS Catalina 10.15.1 - restart your computer - launch blender 2.8 - Turn around default cube scene or a more complex scene. Note poor performances. - Close blender - Run Affinity designer and create new document ( important, if not, magic doesn't happen ) - You can close Affinity or not. - Go to blender 2.8. Now blender run smoothly. Thanks
Author

Added subscriber: @captaincavern

Added subscriber: @captaincavern

#72187 was marked as duplicate of this issue

#72187 was marked as duplicate of this issue
Member

Added subscriber: @zazizizou

Added subscriber: @zazizizou
Member

Thanks for reporting.

I don't have Affinity Designer so I can't reproduce the issue exactly, but could you disable 'automatic graphics switching' - [x] and see if you can reproduce the issue that way?

Thanks for reporting. I don't have Affinity Designer so I can't reproduce the issue exactly, but could you disable 'automatic graphics switching' - [x] and see if you can reproduce the issue that way? - [x] https://support.apple.com/en-us/HT202043
Author

Indeed, Blender stay on integrated GPU. Affinity designer trick was found working with it .I notice Blender runs smoothly.
I disable 'automatic graphics switching' , and , as planned, blender run normally without running AD .
I saw this report https://developer.blender.org/T60043. This is the same bug.
Simple : blender ( or system ) do not automatically switch to best GPU with Catalina :)

Indeed, Blender stay on integrated GPU. Affinity designer trick was found working with it .I notice Blender runs smoothly. I disable 'automatic graphics switching' , and , as planned, blender run normally without running AD . I saw this report https://developer.blender.org/T60043. This is the same bug. Simple : blender ( or system ) do not automatically switch to best GPU with Catalina :)

Added subscriber: @grahamkrenz

Added subscriber: @grahamkrenz

I'm on an iMac iMac (Retina 5K, 27-inch, Late 2015), 3.2 GHz Quad-Core Intel Core i5, 32gb ram

Blender is significantly slower, and since Catalina update, auto-save is not functioning, even if new folder is designated. I've reproduced this on an identical iMac, and experience both performance lag to the extreme, and autosave not working correctly. I am stock, no add-ons active at this time to test.

I'm on an iMac iMac (Retina 5K, 27-inch, Late 2015), 3.2 GHz Quad-Core Intel Core i5, 32gb ram Blender is significantly slower, and since Catalina update, auto-save is not functioning, even if new folder is designated. I've reproduced this on an identical iMac, and experience both performance lag to the extreme, and autosave not working correctly. I am stock, no add-ons active at this time to test.
Brecht Van Lommel changed title from Blender is very slow on MacBook Pro / Catalina. Affinity Designer make Blender faster to macOS automatic graphics switching does not use use more powerful GPU for Blender 2019-12-06 18:37:37 +01:00

Added subscribers: @blenderrocket, @sebbas

Added subscribers: @blenderrocket, @sebbas

This issue was referenced by dd4b98133e

This issue was referenced by dd4b98133eb861f28053e7464574254d3cd9e594

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-12-06 19:36:14 +01:00

I've committed a fix now, but can't test myself since I don't have a dual graphics system. So if it's not fixed in tomorrow's daily build, let us know.

@grahamkrenz any issue with autosave would be unrelated to this, and requires its own bug report.

I've committed a fix now, but can't test myself since I don't have a dual graphics system. So if it's not fixed in tomorrow's daily build, let us know. @grahamkrenz any issue with autosave would be unrelated to this, and requires its own bug report.

I can confirm it has been fixed. The moment Blender starts the system switches to the discrete GPU. Thanks!

I can confirm it has been fixed. The moment Blender starts the system switches to the discrete GPU. Thanks!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71342
No description provided.