Fix T71342: macOS does not always use the discrete GPU for Blender

This reverts commit 3d9cc4d3f174d01c96d65a4e9cd751699bcb8744. The commit
message and intent behind the commit is unclear. We generally want the
discrete GPU to be used for best performance, not the integrated GPU.